src/objects/Equipment_Return_Line__c.object
<CustomObject>
    <fields>
        <fullName>Equipment_Return__c</fullName>
        <label>Equipment Return</label>
        <referenceTo>Equipment_Return__c</referenceTo>
        <relationshipLabel>Equipment Return Lines</relationshipLabel>
        <relationshipName>Equipment_Return_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming - with FO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhouse - with tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated - with MTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated - with Fenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing - with FO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Equipment Return Line</label>
    <nameField>
        <displayFormat>ERL{YY}{MM}{DD}{00000}</displayFormat>
        <label>Equipment Return Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Return Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>